--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Manajemen Bengkel</string>
     <string name="loginbtn"><u>Login</u></string>
+    <string name="forgot"><u>Lupa Password?</u></string>
 </resources>
